--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
 }
 
 .clearfix:after {
@@ -11,20 +10,23 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    margin: 0 auto;
+    width: 1920px;
 }
 
 .slider {
-    width: 1920px;
+
     height: 1024px;
     background-image: url(img/2-layers.jpg);
     position: relative;
+    margin: 0 auto;
 }
 
 .menu {
     display: flex;
     list-style-type: none;
     margin-top: 62px;
-    margin-left: 400px;
+    margin-left: 21%;
 }
 
 
@@ -84,7 +86,7 @@ body {
     font-size: 16px;
     font-weight: 300;
     line-height: 24px;
-    width: 562px;
+    max-width: 562px;
     margin-left: 680px;
     padding-top: 19px;
     padding-bottom: 52px;
@@ -124,7 +126,7 @@ body {
 }
 
 .btn-start {
-    width: 170px;
+    max-width: 170px;
     height: 53px;
     box-shadow: inset 0 -3px 0 #736357;
     border-radius: 3px;
@@ -136,7 +138,7 @@ body {
 }
 
 .btn-start-active:hover {
-    width: 170px;
+    max-width: 170px;
     height: 53px;
     border-radius: 3px;
     background-color: #998675;
@@ -157,7 +159,6 @@ body {
 
 .left {
     transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
     position: absolute;
     left: 7%;
     top: 575px;
@@ -165,7 +166,6 @@ body {
 
 .right {
     transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
     position: absolute;
     right: 7%;
     top: 575px;
@@ -200,149 +200,685 @@ body {
     left: 930px;
 }
 
-.web{
-color: #555555;
-font-family: "Raleway - Semi Bold";
-font-size: 22px;
-font-weight: 400;
-padding-top: 19px;
+.web {
+    color: #555555;
+    font-family: "Raleway - Semi Bold";
+    font-size: 22px;
+    font-weight: 400;
+    padding-top: 19px;
     padding-bottom: 19px;
-   
+
 }
 
-.web-p{
-width: 270px;
-color: #8c8c8c;
-font-family: Montserrat;
-font-size: 14px;
-font-weight: 300;
-line-height: 24px;
-padding-top: 19px: 
+.web-p {
+    max-width: 270px;
+    color: #8c8c8c;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 24px;
+    padding-top: 19px:
 }
 
 
-.img-menu{
-width: 49px;
-height: 49px;
+.img-menu {
+    width: 49px;
+    height: 49px;
 }
 
-.bottom-menu{
+.bottom-menu {
     display: flex;
     margin-top: 80px;
     margin-left: 378px;
     height: 373px;
 }
 
-.bottom-menu-wrap{
+.bottom-menu-wrap {
     padding-left: 30px;
     text-align: center;
-          
-    }
+
+}
 
 
-.box{
+.box {
     border-bottom: 3px solid #ffffff;
     width: 285px;
     height: 200px;
     position: relative;
-  z-index : 1;
+    z-index: 1;
 }
 
 .box:before {
-  content : "";
-  position: absolute;
-  left    : 30%;
-  bottom  : 0;
-  height  : 1px;
-  width   : 50%;  
-  border-bottom:1px solid #f1eee9;
- 
+    content: "";
+    position: absolute;
+    left: 30%;
+    bottom: 0;
+    height: 1px;
+    width: 50%;
+    border-bottom: 1px solid #f1eee9;
+
 }
 
-.box:hover{
- border-bottom: 3px solid #c7b299; 
+.box:hover {
+    border-bottom: 3px solid #c7b299;
 }
 
-.box:hover .img-menu{
+.box:hover .img-menu {
     fill: "red";
     stroke: "red";
 }
 
-.box:hover .web{
+.box:hover .web {
     color: #c7b299;
 }
 
-.box:after::hover{
-   border-bottom: 3px solid #c7b299; 
+.box:after::hover {
+    border-bottom: 3px solid #c7b299;
 }
 
-.web-active{
-  color: #c7b299;
-font-family: "Raleway - Semi Bold";
-font-size: 22px;
-font-weight: 400;
-padding-top: 19px;
+.web-active {
+    color: #c7b299;
+    font-family: "Raleway - Semi Bold";
+    font-size: 22px;
+    font-weight: 400;
+    padding-top: 19px;
     padding-bottom: 19px;
 }
 
-.box-active{
-   border-bottom: 3px solid #c7b299;
-    width: 285px;
+.box-active {
+    border-bottom: 3px solid #c7b299;
+    max-width: 285px;
     height: 200px;
     position: relative;
-  z-index : 1;   
+    z-index: 1;
 }
 
 
-.ideas{
-width: 1920px;
-height: 700px;
+.ideas {
+    max-width: 1920px;
+    height: 700px;
 }
 
-.ideas-title{
-color: #555555;
-font-family: "Raleway - Semi Bold";
-font-size: 30px;
-font-weight: 400;
-   margin-left: 40%;
+.ideas-title {
+    color: #555555;
+    font-family: "Raleway - Semi Bold";
+    font-size: 30px;
+    font-weight: 400;
+    margin-left: 40%;
     padding-bottom: 24px;
     padding-top: 83px;
 }
 
-.ideas-text{
-color: #8c8c8c;
-font-family: Montserrat;
-font-size: 16px;
-font-weight: 300;
-line-height: 28px;
-   margin-left: 32%;
-    width: 757px;
+.ideas-text {
+    color: #8c8c8c;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 28px;
+    margin-left: 32%;
+    max-width: 757px;
     padding-bottom: 40px;
- text-align: center;
+    text-align: center;
 }
 
-.layouts img{
-    width: 770px;
+.layouts img {
+    max-width: 770px;
     margin-bottom: -4px;
 }
-.layouts{
+
+.layouts {
     position: relative;
     text-align: center;
 }
 
-.layout-item-1, .layout-item-3{
+.layout-item-1,
+.layout-item-3 {
     position: absolute;
     height: 400px;
-     z-index: -1;
-    
+    z-index: -1;
+
 }
 
-.layout-item-1{
-    top:20px; left:0; 
-   
-}
-.layout-item-3{
-   top:20px; right:0;   
+.layout-item-1 {
+    bottom: 0%;
+    left: 0;
+
 }
 
-.new
+.layout-item-3 {
+    bottom: 0%;
+    right: 0;
+}
+
+.bottom {
+    max-width: 1920px;
+    background-color: #f4f5f8;
+    background-image: linear-gradient(to right, #211b19 0%, #4e3427 100%);
+    margin-top: 13px;
+    display: flex;
+}
+
+.bottom-h {
+    color: #ffffff;
+    font-family: Raleway;
+    font-weight: 300;
+    margin-left: 8%;
+    padding-top: 50px;
+    padding-bottom: 8px;
+}
+
+.bottom-small {
+    height: 18px;
+    color: #615855;
+    font-family: Montserrat;
+    font-weight: 300;
+    margin-left: 8%;
+    margin-bottom: 40px;
+
+}
+
+.purchase-now {
+    width: 170px;
+    height: 50px;
+    color: #ffffff;
+    font-family: "Raleway";
+    font-weight: 400;
+    text-transform: uppercase;
+    text-align: center;
+    box-shadow: inset 0 -3px 0 #736357;
+    border-radius: 3px;
+    background-color: #998675;
+    padding-top: 14px;
+    padding-left: 28px;
+    display: inline-flex;
+    margin-right: 5%;
+    margin-top: 2%;
+}
+
+.project {
+    padding-top: 5%;
+}
+
+.project-title {
+    color: #555555;
+    font-family: "Raleway";
+    font-size: 30px;
+    font-weight: 400;
+    margin-left: 820px;
+    padding-bottom: 24px;
+}
+
+.project-text-small {
+    width: 40%;
+    color: #8c8c8c;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 300;
+    padding-bottom: 50px;
+}
+
+.btn-project-item {
+    color: #8c8c8c;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    width: 120px;
+    height: 32px;
+    border-radius: 3px;
+    border: 1px solid #ebebeb;
+    background-color: white;
+}
+
+.btn-project {
+    margin-left: 643px;
+    margin-bottom: 40px;
+}
+
+.wrap-images {
+    display: flex;
+    width: 80%;
+
+
+}
+
+.article-item {
+    padding-right: 15px;
+}
+
+.load {
+    color: #ffffff;
+    font-family: "Raleway";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 23px;
+    text-transform: uppercase;
+    width: 170px;
+    height: 50px;
+    box-shadow: inset 0 -3px 0 #736357;
+    border-radius: 3px;
+    background-color: #998675;
+    margin-left: 45%;
+    margin-top: 30px;
+    margin-bottom: 80px;
+}
+
+.article-title {
+    color: #c7b299;
+    font-family: Raleway;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.article-p {
+    color: #d1d1d1;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+}
+
+.video {
+    width: 1920px;
+    height: 705px;
+    position: relative;
+    z-index: 0;
+}
+
+
+
+.overlay {
+    position: absolute;
+    top: 300px;
+    z-index: 1;
+
+}
+
+.video-text {
+    color: #ffffff;
+    font-family: Raleway;
+    font-size: 30px;
+    font-weight: 500;
+    padding-left: 700px;
+}
+
+.video-text-p {
+    color: #ffffff;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 28px;
+    width: 552px;
+    padding-top: 29px;
+    padding-bottom: 29px;
+    padding-left: 640px;
+}
+
+.time {
+    color: #c7b299;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    padding-top: 40px;
+    padding-left: 870px;
+}
+
+.btn-padding {
+    padding-left: 850px;
+    padding-bottom: 30px;
+}
+
+.devices {
+    background-image: url(img/devices-img.jpg);
+    width: 100%;
+    height: 695px;
+    margin-top: 79px;
+}
+
+.devices-title {
+    color: #555555;
+    font-family: "Raleway";
+    font-size: 30px;
+    font-weight: 400;
+    padding-bottom: 40px;
+}
+
+.devices-text {
+    color: #8c8c8c;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 28px;
+}
+
+.devices-list {
+    color: #8c8c8c;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 32px;
+    margin-top: 45px;
+}
+
+.devices-wrap {
+    padding-top: 195px;
+    margin-left: 50%;
+
+}
+
+.devices-item {
+    list-style-image: url(img/arrow-small.svg);
+}
+
+.numbers {
+    background-image: url(img/Background-gradient.jpg);
+    width: 100%;
+    height: 270px;
+    display: inline-flex;
+}
+
+.number-text {
+    color: #ffffff;
+    font-family: "Montserrat";
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 36px;
+    margin-top: 20px;
+    padding-bottom: 20px;
+}
+
+.number-text-p {
+    color: #c7b299;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+    text-transform: uppercase;
+    border-bottom: 3px solid white;
+    padding-bottom: 20px;
+}
+
+.numbers-wrap {
+    margin-top: 35px;
+    text-align: center;
+
+}
+
+.recent-project-title {
+    color: #555555;
+    font-family: "Raleway";
+    font-size: 30px;
+    font-weight: 400;
+    margin-top: 82px;
+    margin-left: 45%;
+}
+
+.recent-project-p {
+    color: #8c8c8c;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 28px;
+    margin-top: 30px;
+    margin-left: 30%;
+    text-align: center;
+    width: 757px;
+    margin-bottom: 30px;
+}
+
+.recent-project-title-small {
+    color: #555555;
+    font-family: Raleway;
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 30px;
+    padding-left: 7%;
+}
+
+.recent-project-p-small {
+    color: #8c8c8c;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    margin-top: 25px;
+    margin-bottom: 19px;
+    padding-left: 7%;
+}
+
+.recent-project-more {
+    color: #c7b299;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+    padding-left: 7%;
+}
+
+.img-pro {
+    width: 370px;
+    height: 220px;
+    display: block;
+}
+
+.image-undertext {
+    height: 175px;
+    width: 370px;
+
+}
+
+.recent-project-wrap {
+    display: block;
+}
+
+.recent-wrap-three {
+    display: flex;
+}
+
+.background-dark {
+    background-color: #362f2d;
+}
+
+.lorem-text {
+    color: #c7b299;
+    margin-top: -4px;
+    padding-top: 25px;
+}
+
+.lorem-text-p {
+    color: white;
+}
+
+.arrow-sign {
+    width: 22px;
+    height: 22px;
+    padding-left: 12px;
+}
+
+.nav-arrow-project {
+    margin-top: 40px;
+    margin-bottom: 80px;
+    margin-left: 47%;
+}
+
+.logo-section {
+    width: 100%;
+    height: 489px;
+    background-image: url(img/2-layers-last.jpg)
+}
+
+.images-section {
+    padding-left: 26%;
+}
+
+.img-padding-last {
+    padding-right: 5%;
+    padding-top: 70px;
+}
+
+.last-text {
+    width: 258px;
+    color: #555555;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 24px;
+}
+
+.read-more-p {
+    color: #d1d1d1;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+.last {
+    width: 100%;
+    background-image: url(img/Background-strange.jpg);
+    height: 508px;
+    display: flex;
+}
+
+.last-p {
+    margin-top: 80px;
+    margin-left: 300px;
+    width: 258px;
+}
+
+.last-text {
+    color: #555555;
+    font-family: Montserrat;
+    font-size: 14px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.read-more {
+    color: #d1d1d1;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.post-title {
+    color: #ffffff;
+    font-family: Raleway;
+    font-size: 24px;
+    font-weight: 700;
+    padding-bottom: 30px;
+}
+
+.date {
+    color: #363636;
+    font-family: Montserrat;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 20px;
+    padding-bottom: 10px;
+}
+
+.under-date-text {
+    color: #555555;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+    padding-bottom: 42px;
+}
+
+.post-title-active {
+    color: #ffffff;
+    font-family: Montserrat;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 20px;
+}
+
+.under-date-text-active {
+    color: #c7b299;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+}
+
+.twitter-title {
+    color: #ffffff;
+    font-family: Raleway;
+    font-size: 24px;
+    font-weight: 700;
+    padding-bottom: 30px;
+}
+
+.about-twitter {
+    color: #555555;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+}
+
+.about-twitter-date {
+    color: #363636;
+    font-family: Montserrat;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 20px;
+}
+
+.Dribbble-widget {
+    color: #ffffff;
+    font-family: Raleway;
+    font-size: 24px;
+    font-weight: 700;
+    padding-bottom: 30px;
+}
+
+.post {
+    margin-top: 94px;
+    width: 300px;
+}
+
+.twitter {
+    margin-top: 94px;
+    width: 264px;
+}
+
+.widget {
+    margin-top: 94px;
+    width: 300px;
+}
+
+footer {
+    height: 111px;
+    width: 100%;
+    background-color: #111111;
+
+}
+
+.footer-text {
+    color: #555555;
+}
+
+.Waxom-a {
+    color: color: #959595;
+    text-decoration: none;
+
+}
+
+.faq-active {
+    color: #c7b299;
+}
+
+.waxom-wrap {
+   padding-top: 30px;
+    margin-left: 10px;
+    width: 30%;
+    display: flex;
+    margin-top: -6px;
+    background-color: #111111;
+    font-family: Montserrat;
+    font-size: 13px;
+    font-weight: 300;
+}
